[project]
name = "biztools4openclaw"
version = "0.1.0"
description = "BizTools4Openclaw — 智能商机抓取、清洗、分发与跟踪一体化工具"
requires-python = ">=3.11,<3.13"
authors = [
    {name = "BizTools Team"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "SQLAlchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    "alembic>=1.13.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "redis>=5.0.0",
    "APScheduler>=3.10.4",
    "playwright>=1.42.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
biztools-server = "adapter.main:run_server"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    "ignore:.*asyncio_default_fixture_loop_scope.*:pytest.PytestDeprecationWarning",
    "ignore:The default datetime adapter is deprecated as of Python 3.12",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
